--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div style="height: 20rem; background-color: #eeeeee; margin: 2rem; border-radius: 1rem">
-        <h1>Thank you for coming!</h1>
+        <h1>Enjoy Your Freedom!</h1>
     </div>
 
 {% endblock %}
