--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -5,6 +5,7 @@
     <style>
 
         .test {
+            display: inline-block;
             background-color: #ffbd41;
             margin: 1rem;
             height: 48px;
@@ -14,13 +15,15 @@
 
     </style>
 
-    <div style="height: 20rem; background-color: #f8e4e4; margin: 2rem; border-radius: 1rem">
+    <div style="height: 20rem; background-color: #f8e4e4;
+     margin: 2rem; border-radius: 1rem; font-size: 24px;">
         <h1>Enjoy Your Freedom!</h1>
 
-        <div class="test" style="display: block">block</div>
-        <div class="test" style="display: inline">inline</div>
-        <div class="test" style="display: inline-block">inline-block</div>
-        <div class="test" style="display: none">none</div>
+        <div class="test" style="height: 48px; width: 48px;">block</div>
+        <div class="test" style="height: 3em; width: 3em;">block</div>
+        <div class="test" style="height: 3rem; width: 3rem;">block</div>
+        <div class="test" style="height: 30%; width: 30%;">block</div>
+
     </div>
 
 
