--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,27 +2,11 @@
 
 {% block content %}
 
-    <style>
+    <div style="margin: 2rem; text-align: center">
+        <h1>METHOD!</h1>
 
-        .test {
-            display: inline-block;
-            background-color: #ffbd41;
-            margin: 1rem;
-            height: 48px;
-            width: 48px;
-            border-radius: .5rem;
-        }
 
-    </style>
-
-    <div style="height: 20rem; background-color: #f8e4e4;
-     margin: 2rem; border-radius: 1rem; font-size: 24px;">
-        <h1>Enjoy Your Freedom!</h1>
-
-        <div class="test" style="height: 48px; width: 48px;">block</div>
-        <div class="test" style="height: 3em; width: 3em;">block</div>
-        <div class="test" style="height: 3rem; width: 3rem;">block</div>
-        <div class="test" style="height: 30%; width: 30%;">block</div>
+        <h5>{{ text }}</h5>
 
     </div>
 
