--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -4,7 +4,10 @@
 
     <div style="margin: 2rem; text-align: center">
         <h1>METHOD!</h1>
-
+        <form action="/accountapp/hello_world/" method="post">
+            {% csrf_token %}
+            <input type="submit" class="px-5 btn btn-dark">
+        </form>
 
         <h5>{{ text }}</h5>
 
