--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -6,10 +6,11 @@
         <h1>METHOD!</h1>
         <form action="/accountapp/hello_world/" method="post">
             {% csrf_token %}
+            <input type="text" name="hello_world_input">
             <input type="submit" class="px-5 btn btn-dark">
         </form>
 
-        <h5>{{ text }}</h5>
+        <h5>{{ hello_world_output.text }}</h5>
 
     </div>
 
