--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -9,15 +9,19 @@
         <div>
            {{ target_user.date_joined }}
         </div>
+
+        {% if user == target_user %}
+
         <div>
-            <a href="{% url 'accountapp:update' pk=user.pk %}">
+            <a href="{% url 'accountapp:update' pk=target_user.pk %}">
                 Update Info
             </a>     {# user : 요청을 보내는 주체 #}
         </div>
         <div>
-            <a href="{% url 'accountapp:delete' pk=user.pk %}">
+            <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
                 Quit Account
             </a>
         </div>
+        {% endif %}
     </div>
 {% endblock %}
