--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -5,19 +5,19 @@
     <div class="text-center mw-500 m-auto">
         <div class="m-5">
             {% if target_user.profile %}
-            <img src="{{ target_user.profile.image.url }}"
-                 class="profile_image m-4"
-                 alt="profile image">
-            <h2 class="NNS_B">
-                {{ target_user.profile.nickname }}
-                    {% if user == target_user %}
-                        <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}"
-                            class="material-icons round_button">
-                            edit
-                        </a>
-                    {% endif %}
-            </h2>
-            <h5>{{ target_user.profile.message }}</h5>
+                <img src="{{ target_user.profile.image.url }}"
+                     class="profile_image m-4"
+                     alt="profile image">
+                <h2 class="NNS_B">
+                    {{ target_user.profile.nickname }}
+                        {% if user == target_user %}
+                            <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}"
+                                class="material-icons round_button">
+                                edit
+                            </a>
+                        {% endif %}
+                </h2>
+                <h5>{{ target_user.profile.message }}</h5>
             {% else %}
             <h2>
                 <a href="{% url 'profileapp:create' %}">
@@ -33,13 +33,13 @@
         {% if user == target_user %}
 
         <div>
-            <a href="{% url 'accountapp:update' pk=target_user.pk %}">
-                Update Info
+            <a href="{% url 'accountapp:update' pk=target_user.pk %}"
+                class="material-icons round_button mx-1">
+                settings
             </a>     {# user : 요청을 보내는 주체 #}
-        </div>
-        <div>
-            <a href="{% url 'accountapp:delete' pk=target_user.pk %}">
-                Quit Account
+            <a href="{% url 'accountapp:delete' pk=target_user.pk %}"
+                class="material-icons round_button mx-1">
+                close
             </a>
         </div>
         {% endif %}
