--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -10,7 +10,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 8px;
+            border-radius: 1rem;
                 box-shadow: 0 0 0.8rem darkgray;
                 flex-direction: column;
         }
@@ -22,7 +22,7 @@
 
     </style>
 
-    <div class="container">
+    <div class="container my-5">
 
         {% for article in article_list %}
 
@@ -30,12 +30,15 @@
                 <a href="{% url 'articleapp:detail' pk=article.pk %}">
                     <img src="{{ article.image.url }}" alt="">
                 </a>
-                <span>{{ article.title }}</span>
+                <span class="NNS_B m-3">{{ article.title }}</span>
             </div>
 
         {% endfor %}
+
     </div>
 
     <script src="{% static 'js/magicgrid.js' %}"></script>
+
+    {% include 'snippets/pagination.html' %}
 
 {% endblock %}
