--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,11 @@
         <h1>Freedom</h1>
     </div>
     <div class="freedom_header_button">
-        <span>nav1</span>
+        <span>
+            <a href="{% url 'articleapp:list' %}">
+                Articles
+            </a>
+        </span>
         <span>nav2</span>
 
         {% if not user.is_authenticated %}
