--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -51,6 +51,13 @@
                     <div class="my-2">
                         <p>{{ comment.content }}</p>
                     </div>
+                    {% if comment.writer == user %}
+                    <div>
+                        <a href="{% url 'commentapp:delete' pk=comment.pk %}">
+                            Delete
+                        </a>
+                    </div>
+                    {% endif %}
                 </div>
 
             {% endfor %}
