--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -10,10 +10,13 @@
             <h1 class="NNS_B">{{ target_article.title }}</h1>
             <div>
                 <a href="{% url 'likeapp:article_like' article_pk=target_article.pk %}"
-                   class="material-icons">
+                   class="material-icons"
+                   style="vertical-align: middle; color: #f77;">
                     favorite
                 </a>
-                {{ target_article.like }}
+                <div style="vertical-align: middle;">
+                    {{ target_article.like }}
+                </div>
             </div>
             <h4>{{ target_article.writer.profile.nickname }}</h4>
             <p>{{ target_article.created_at }}</p>
