--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,18 @@
 
 <hr>
 
-    {% block content %}
+{% for message in messages %}
+    <div class="text-center">
+        <div class="btn btn-success rounded-pill px-5">
+            {{ message }}
+        </div>
 
-    {% endblock %}
+    </div>
+{% endfor %}
+
+{% block content %}
+
+{% endblock %}
 
 <hr>
     {% include 'footer.html' %}
