--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -8,15 +8,15 @@
         <div class="my-5">
             {#      제목/ 글쓴이/ 날짜      #}
             <h1 class="NNS_B">{{ target_article.title }}</h1>
-            <div>
+            <div class="my-3">
                 <a href="{% url 'likeapp:article_like' article_pk=target_article.pk %}"
                    class="material-icons"
-                   style="vertical-align: middle; color: #f77;">
+                   style="vertical-align: middle; color:#e76464">
                     favorite
                 </a>
-                <div style="vertical-align: middle;">
+                <span style="vertical-align: middle;">
                     {{ target_article.like }}
-                </div>
+                </span>
             </div>
             <h4>{{ target_article.writer.profile.nickname }}</h4>
             <p>{{ target_article.created_at }}</p>
@@ -29,7 +29,7 @@
                  class="article_image">
 
             <div class="article_content">
-                {{ target_article.content }}
+                {{ target_article.content | safe }}
             </div>
 
             {% if target_article.writer == user %}
