--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -7,7 +7,7 @@
 
         .container {
             padding: 0;
-            margin: 0 0 auto;
+            margin: 0 auto;
         }
 
         .container div {
